Port MX to Minestom and update build
Switch the project from a Bukkit/Paper/ProtocolLib plugin to a Minestom-based server build. Key changes:
- Replace Bukkit/ProtocolLib usage with Minestom APIs: refactor MX (init, listeners, scheduler, commands, logging) and register listeners via GlobalEventHandler.
- Add Main launcher to start a Minestom server and initialize MX.
- Rewrite Metrics to remove Bukkit dependencies and adapt bStats submission to Minestom environment.
- Update pom.xml: bump Java to 25, add Minestom and Guava deps, use maven-assembly-plugin, include YAML resources, and configure Lombok processor.
- Add Minestom-specific utilities and configuration files (plugins/MX/{checks.yml,config.yml}), remove plugin.yml.
- Numerous listener, event and service adaptations across the codebase to support the Minestom migration.

Signed-off-by: Burnet01 <ddalin01@gmail.com>