@@ -1,6 +1,5 @@
 package kireiko.dev.anticheat.commands.subcommands;
 
-import com.google.common.collect.ImmutableList;
 import kireiko.dev.anticheat.MX;
 import kireiko.dev.anticheat.api.data.PlayerContainer;
 import kireiko.dev.anticheat.api.data.RotationsContainer;
@@ -9,8 +8,7 @@ import kireiko.dev.anticheat.commands.MXSubCommand;
 import kireiko.dev.anticheat.core.AsyncScheduler;
 import kireiko.dev.anticheat.utils.MessageUtils;
 import kireiko.dev.anticheat.utils.NetworkUtil;
-import org.bukkit.command.CommandSender;
-import org.jetbrains.annotations.NotNull;
+import net.minestom.server.command.CommandSender;
 
 import java.util.List;
 
@@ -26,7 +24,7 @@ public final class ActivityCommand extends MXSubCommand {
 
     @Override
     public String getUsage() {
-        return "/" + MX.command + " " + getName() + " <player>";
+        return "/mx activity <player>";
     }
 
     @Override
@@ -45,37 +43,34 @@ public final class ActivityCommand extends MXSubCommand {
     }
 
     @Override
-    public boolean onCommand(@NotNull CommandSender sender, String[] args) {
+    public boolean onCommand(CommandSender sender, String[] args) {
         PlayerProfile target = PlayerContainer.getProfileByName(args[0]);
         if (target == null) {
             sender.sendMessage("§cPlayer not found... Sorry!");
             return true;
         }
-        { // uploading
-            AsyncScheduler.run(() -> {
-                sender.sendMessage(MessageUtils.wrapColors("&9Uploading, wait for it..."));
-                final String result = NetworkUtil.createPaste(RotationsContainer.getJson(target.getPlayer().getUniqueId()));
-                if (result == null) {
-                    sender.sendMessage(MessageUtils.wrapColors("&cUnknown error while loading :("));
-                } else {
-                    sender.sendMessage(MessageUtils.wrapColors(
-                                    "&e&e",
-                                    "&e" + target.getPlayer().getName() + "&9 data: &6" + result,
-                                    "&cYou need to paste the link into the MX panel application!",
-                                    "&fPlease download it here:",
-                                    "&7https://drive.google.com/file/d/1b_7RHz0mIuk4PXvcFScFZf57VE-VCfQg/view?usp=sharing",
-                                    "&e&e"
-                                    )
-                    );
-                }
-            });
-        }
+        AsyncScheduler.run(() -> {
+            sender.sendMessage(MessageUtils.wrapColors("&9Uploading, wait for it..."));
+            final String result = NetworkUtil.createPaste(RotationsContainer.getJson(target.getPlayer().getUuid()));
+            if (result == null) {
+                sender.sendMessage(MessageUtils.wrapColors("&cUnknown error while loading :("));
+            } else {
+                sender.sendMessage(MessageUtils.wrapColors(
+                        "&e&e",
+                        "&e" + target.getPlayer().getName() + "&9 data: &6" + result,
+                        "&cYou need to paste the link into the MX panel application!",
+                        "&fPlease download it here:",
+                        "&7https://drive.google.com/file/d/1b_7RHz0mIuk4PXvcFScFZf57VE-VCfQg/view?usp=sharing",
+                        "&e&e"
+                ));
+            }
+        });
         return true;
     }
 
     @Override
     public List<String> onTabComplete(CommandSender sender, String[] args) {
         if (args.length == 1) return null;
-        return ImmutableList.of(); // return empty list
+        return List.of();
     }
 }
