@@ -1,11 +1,10 @@
 package kireiko.dev.anticheat.commands.subcommands;
 
-import com.google.common.collect.ImmutableList;
+import kireiko.dev.anticheat.MX;
 import kireiko.dev.anticheat.api.player.fun.FunItemsService;
 import kireiko.dev.anticheat.commands.MXSubCommand;
-import org.bukkit.command.CommandSender;
-import org.bukkit.entity.Player;
-import org.jetbrains.annotations.NotNull;
+import net.minestom.server.command.CommandSender;
+import net.minestom.server.entity.Player;
 
 import java.util.List;
 
@@ -35,7 +34,7 @@ public final class FunCommand extends MXSubCommand {
     }
 
     @Override
-    public boolean onCommand(@NotNull CommandSender sender, String[] args) {
+    public boolean onCommand(CommandSender sender, String[] args) {
         Player player = (Player) sender;
         FunItemsService.give(player);
         sender.sendMessage("Given fun items");
@@ -44,6 +43,6 @@ public final class FunCommand extends MXSubCommand {
 
     @Override
     public List<String> onTabComplete(CommandSender sender, String[] args) {
-        return ImmutableList.of();
+        return List.of();
     }
 }
